--- a/Captstone_Project/Captstone_Project.csproj
+++ b/Captstone_Project/Captstone_Project.csproj
@@ -59,7 +59,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\Scores.txt" />
+    <Content Include="Data\Scores.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
